# SecondYear

./: .gitignore
BeginTask-0/: ArrayHandler.h  CMakeLists.txt  ah.cpp  main.cpp
BitField-2/: BitField.cpp  BitField.h  CMakeLists.txt  Set.cpp  Set.h  newclass.h
